refactor: update frontend components and style

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#0ea5e9" />
     <meta
       name="description"
-      content="Catch a Phish! - Beach-themed Email Security & Phishing Detection App"
+      content="Catch a Phish! - Email Security & Phishing Detection App"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
